--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea
 /node_modules
 /public/hot
 /public/storage
@@ -10,3 +11,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
+clover.xml
+report.xml
+/.docker/dbdata/*
+/.docker/rddata/*
+/coverage
